--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "pre-commit": "^1.2.2",
     "qiniu": "^7.1.1",
     "reflect-metadata": "^0.1.10",
+    "rimraf": "^2.6.2",
     "typescript": "^2.6.1",
     "unzip": "^0.1.11",
     "unzip2": "^0.2.5"
